added pom for hive